# sonos-challenge

./: Cargo.toml  README.md  challenge.md  proposed-questions.md
doc/: notes.md  server-architecture.md  spec-change-and-jitter-.md
doc/write-up/: main.typ
doc/write-up/content/: ai-usage.typ  cli.typ  client.typ  communication-protocol.typ  future-work.typ  handling-audio.typ  introduction.typ  tcp-communication.typ
src/: audio.rs  cli.rs  lib.rs  network.rs
src/audio/: input.rs  message.rs  mod.rs  output.rs  source.rs
src/cli/: client.rs  parsers.rs  server.rs
src/client/: main.rs
src/network/: tcp.rs
src/server/: main.rs
