[package]
name = "sonos-challenge"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
cpal = "0.16.0"
ctrlc = "3.5.1"
env_logger = "0.11.8"
hound = "3.5.1"
log = "0.4.28"
ringbuf = "0.4.8"
